--- a/src/input.css
+++ b/src/input.css
@@ -8,6 +8,10 @@
     @apply bg-white rounded overflow-hidden shadow-md relative;
 }
 
+.card:hover {
+    @apply shadow-lg cursor-pointer;
+}
+
 .badge {
     @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
 }
